필터값 로컬스토리지 저장 / 미디어라벨 URL 쿼리

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <canvas id="canvas"></canvas>
     <div id="filter">
       <label>회색</label>
-      <input type="range" name="grayscale" min="0" max="100" value="100" />
+      <input type="range" name="grayscale" min="0" max="100" />
       <span id="grayscale">0</span>
       <br />
       <!-- <label>색상반전</label>
@@ -20,15 +20,15 @@
       <span id="hue">0</span>
       <br /> -->
       <label>블러</label>
-      <input type="range" name="blur" min="0" max="5" step="0.01" value="0.7" />
+      <input type="range" name="blur" min="0" max="5" step="0.01" />
       <span id="blur">0</span>
       <br />
       <label>밝기</label>
-      <input type="range" name="brightness" min="1" max="5" step="0.01" value="1.2" />
+      <input type="range" name="brightness" min="1" max="5" step="0.01" />
       <span id="brightness">0</span>
       <br />
       <label>대비</label>
-      <input type="range" name="contrast" min="1" max="10" step="0.01" value="1.15" />
+      <input type="range" name="contrast" min="1" max="10" step="0.01" />
       <span id="contrast">0</span>
     </div>
   </div>
