--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <label>대비</label>
       <input type="range" name="contrast" min="1" max="10" step="0.01" />
       <span id="contrast">0</span>
+      <br />
+      <button id="reset">초기화</button>
     </div>
   </div>
   <script src="./dist/index.js"></script>
